<resources>
    <string name="app_name">Animated Login Screen</string>

    <!-- for login page -->
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_logging_in">Logging in</string>
    <string name="txt_post_gmail_com">\@gmail.com</string>
    <string name="txt_email_id">Email Id</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">Login</string>
</resources>
